--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,4 +4,21 @@
   padding: 0;
 }
 
-// TODO
+:root {
+  --pink-500: #FF57B2;
+
+  --black-100: #1A1D23;
+
+  --gray-100: #D7D7D7;
+  --gray-200: #BBBBBB;
+
+  --white: #F8F8F8;
+}
+
+body {
+  background-color: var(--black-100);
+}
+
+body, input, textarea, select, button {
+  font: 400 1rem "Inter", sans-serif;
+}
