--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,38 @@
-// TODO
+.headerContainer {
+  align-items: center;
+  display: flex;
+  height: 105px;
+  margin: 0 auto;
+  max-width: 700px;
+  width: 100%;
+
+  a {
+    text-decoration: none;
+  }
+
+  span {
+    color: var(--white);
+    font-size: 20px;
+    font-weight: bold;
+    transition: filter .2s;
+
+    img {
+      height: 23px;
+      width: 40px;
+      margin-right: 10px;
+      position: relative;
+      top: 2px;
+    }
+
+    &::after {
+      content: '.';
+      color: var(--pink-500);
+      margin-left: 2px;
+      font-size: 20px;
+    }
+
+    &:hover {
+      filter: brightness(0.8);
+    }
+  }
+}
